compared and updated with husky_3.0.0 branch